# Drobot

./: CMakeLists.txt  README.md  package.xml
.docker/: jazzy.amd64.dockerfile  jazzy.arm64v8.dockerfile
.github/workflows/: docker-amd64.yml  docker-arm64v8.yml  jazzy-source-build.yml  lint.yml
apriltag_dock/: CMakeLists.txt  package.xml
apriltag_dock/include/apriltag_dock/: TfPlugin.hh  controller.h
apriltag_dock/launch/: apriltag_pose_publisher.launch.py  apriltag_sol.launch.py
apriltag_dock/param/: movus.yaml
apriltag_dock/src/: TfPlugin.cpp  apriltag_pose_publisher.cpp  auto_dock_client.cpp  auto_dock_server.cpp  controller.cpp  find_apriltag.cpp  main.cpp  service_client_node.cpp  service_state.cpp
apriltag_dock_msgs/: CMakeLists.txt  package.xml
apriltag_dock_msgs/action/: AutoDock.action
apriltag_msgs/: CMakeLists.txt  package.xml
apriltag_ros/: CMakeLists.txt  package.xml
apriltag_ros/include/apriltag_ros/: tag_functions.hpp
apriltag_ros/launch/: apriltag_launch.py
apriltag_ros/params/: apriltag_params.yaml
apriltag_ros/src/: apriltag_node.cpp
drobot/: CMakeLists.txt  package.xml
drobot_rviz/: CMakeLists.txt  package.xml
drobot_rviz/rviz/: movus.rviz
env-hooks/: drobot.dsv.in  movus_ignition_sim.sh.in
examples/drobot_demos/: CMakeLists.txt  package.xml
examples/drobot_demos/launch/: drobot_world.launch.py  object_in_empty_world.launch.py  sensor_in_empty_world.launch.py
examples/drobot_robot_launch/: CMakeLists.txt  package.xml
examples/drobot_robot_launch/launch/: robot_in_world.launch.py
extras/: mavros-ubuntu-install.sh
extras/repos/: drobot.jazzy.repos
launch/: movus.launch.py  movus_line_follow.launch.py  movus_tag.launch.py
models/apriltag_block/: model.config
models/drobot_object_models/: CMakeLists.txt  package.xml
models/drobot_object_models/description/apriltag_block/: model.sdf
models/drobot_object_models/launch/: upload_object.launch.py
models/drobot_robot_models/: CMakeLists.txt  package.xml
models/drobot_robot_models/description/movus/: model.config  model.sdf
models/drobot_robot_models/launch/: upload_robot.launch.py
models/drobot_worlds/: CMakeLists.txt  package.xml
models/drobot_worlds/worlds/: dave_bimanual_example.world
models/line_follower_track/: model.config  model.sdf
models/line_follower_track/meshes/: line_follower_track.dae
models/movus/: model.sdf
recovery/: CMakeLists.txt  package.xml
rviz/: CMakeLists.txt  movus.rviz  package.xml
scripts/: oa2.py  transform_publisher.py
worlds/: station.sdf
